# crewagent

./: Readme.md  requirements.txt
logistics/: README.md  carrier_report.md  pyproject.toml  report.md
logistics/knowledge/: calculation.py
logistics/src/logistics/: crew.py  main.py
logistics/src/logistics/config/: agents.yaml  tasks.yaml
