[project]
name = "logistics"
version = "0.1.0"
description = "logistics using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
logistics = "logistics.main:run"
run_crew = "logistics.main:run"
train = "logistics.main:train"
replay = "logistics.main:replay"
test = "logistics.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
